syntax = "proto3";

package model;

option java_package = "com.chefencasa.model";
option java_outer_classname = "UserProto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service UsersService {
  rpc AddUser(User) returns (User) {}
  rpc ValidarCredenciales(User) returns (User) {}

}

message Users {
  repeated User user = 1;
}

message User {
  int32 id = 1;
  string email = 2;
  string name = 3;
  string nick = 4;
  string password = 5;
  string role = 6;
  string surname = 7;
}